# mcp-time-server

./: pyproject.toml
src/mcp_time_server/: __init__.py  __main__.py  api.py  server.py
tests/: test_api.py  test_server.py
